blog tag part2 end

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -333,3 +333,12 @@ ul.social-icons li {
 span.required {
     color: red;
 }
+
+
+
+/*backend*/
+/* sidebar link font size */
+.main-sidebar .sidebar li a
+{
+    font-size: 14px;
+}
