comment table and comment post relationship

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -340,5 +340,5 @@ span.required {
 /* sidebar link font size */
 .main-sidebar .sidebar li a
 {
-    font-size: 14px;
+    font-size: 14px !important;
 }
